trying to set iterations with dynamic plotting